tests/machine/x/rust/cross_join_filter.error
line 0: compile: exit status 1
error[E0308]: mismatched types
 --> /workspace/mochi/tests/machine/x/rust/cross_join_filter.rs:4:203
  |
4 | ...d::collections::HashMap::new(); m.insert("n", n); m.insert("l", l); m }); } } tmp1 };
  |                                    -             -     ------      ^ expected `&{integer}`, found `&&str`
  |                                    |             |     |
  |                                    |             |     arguments to this method are incorrect
  |                                    |             this argument has type `&{integer}`...
  |                                    ... which causes `m` to have type `HashMap<&str, &{integer}>`
  |
  = note: expected reference `&{integer}`
             found reference `&&str`
help: the return type of this call is `&&str` due to the type of the argument passed
 --> /workspace/mochi/tests/machine/x/rust/cross_join_filter.rs:4:189
  |
4 | ...ashMap::new(); m.insert("n", n); m.insert("l", l); m }); } } tmp1 };
  |                                     ^^^^^^^^^^^^^^-^
  |                                                   |
  |                                                   this argument influences the return type of `insert`
note: method defined here
 --> /rustc/17067e9ac6d7ecb70e50f92c1944e545188d2359/library/std/src/collections/hash/map.rs:1201:12

error[E0609]: no field `n` on type `HashMap<&str, &{integer}>`
 --> /workspace/mochi/tests/machine/x/rust/cross_join_filter.rs:7:33
  |
7 |         println!("{:?} {:?}", p.n, p.l);
  |                                 ^ unknown field

error[E0609]: no field `l` on type `HashMap<&str, &{integer}>`
 --> /workspace/mochi/tests/machine/x/rust/cross_join_filter.rs:7:38
  |
7 |         println!("{:?} {:?}", p.n, p.l);
  |                                      ^ unknown field

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0308, E0609.
For more information about an error, try `rustc --explain E0308`.

fn main() {
